tests/macros/int/mask.stderr
error: option `mask` does not exist for kind `int`
 --> $DIR/mask.rs:2:43
  |
2 |     let q = inquisition::questions![Int { mask: todo!() }];
  |                                           ^^^^
