tests/macros/int/mask.rs
fn main() {
    let q = inquisition::questions![Int { mask: todo!() }];
}
